java: raise project baseline to Java 17
Raise the minimum supported Java version from Java 8 to Java 17 across
the repository.

- Toolchain & Compiler:
  - Update default javacopts to `--release 17` in `java_defs.bzl`.
  - Update target release across all library package and test suite
    `BUILD.bazel` files from 8 and 11 to 17.
  - Retain Multi-Release (MR) JAR packaging capabilities in `jjq_java_mrjar`,
    allowing future overlays for newer JDK releases while setting
    `multi_release` dynamically based on `release_overlays`.

- SPI Sealing & Descriptor Consolidation:
  - Seal `Path` and `Module` directly in `jackson-jq-spi` base sources
    and remove the `src/main/java17` overlay directory.
  - Relocate `module-info.java` from `src/main/java9/` to `src/main/java/`
    across all 18 modules, and remove all `src/main/java9/` directories.

- Java 8 Cleanup:
  - Modernize URI encode/decode calls in `AtUriFunction`, `UriDecodeFunction`,
    and `UriParseFunction` with standard `StandardCharsets.UTF_8`, removing
    obsolete encoding exception workarounds and `@SuppressWarnings("JdkObsolete")`.

- Smoke Tests & CI:
  - Replace `smoke-tests/java8` with `smoke-tests/java17`, targeting release 17
    and covering Jackson 2, Jackson 3, Gson, Jakarta, and all extension modules.
  - Update `smoke-tests/osgi` compiler release to 17.
  - Remove JDK 8 from PR CI workflows and run `smoke-tests/java17` under JDK 17.
  - Update version references and documentation in README and development docs.